# shacharmirkin.github.io

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Gemfile  README.md  Rakefile  SECURITY.md  _config.yml  accessibility.md  agent-index.source.md  blog.md  contact.md  index.html  index.md  llms.txt  pyproject.toml  research.md  robots.txt  site.webmanifest  snippets.md
.github/: preview.yml
.github/workflows/: ci.yml  deploy.yml  preview.yml  update-scholar.yml
.well-known/: agent.json
_data/: citations.yml  scholar.yml
_includes/: external-link-hint.html  home-profile.html  lang-switcher.html  org-schema.html  post-read-aloud.html  site-footer.html  skip-link.html
_layouts/: default.html  post.html
_posts/: 2024-09-25-chess-openings.md  2024-10-30-shobot.md  2025-04-16-github-invalid-notbooks.md  2025-04-16-test-post.md  2025-04-17-test-post2.md  2025-04-26-vllm-on-google-colab.md  2026-01-25-scf2025-mit-inflatables.md  2026-03-13-llm-sees-something-else.md  2026-03-18-universal-ner-v2-lrec-2026.md  2026-04-19-grenoble-data-science-meetup.md  2026-04-30-ibex-vision-llm-test-2026.md
assets/css/: main.scss
assets/js/: post-read-aloud.js
fr/: index.md
preview/setup-preview-workflow/: index.html  index.md
scripts/: enrich_citations.py
tests/: test_site_artifacts.py
tools/a11y/: .pa11yci.json  README.md  a11y.sh  package-lock.json  package.json
