[project]
name = "shacharmirkin-github-io"
version = "0"
requires-python = ">=3.9"
dependencies = []
description = "Jekyll site; Python deps are for CI/local checks only."

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = [
    "integration: checks built ./_site (run `bundle exec rake test` first locally).",
]
testpaths = ["tests"]
