[project]
name = "shacharmirkin-github-io"
version = "0"
requires-python = ">=3.10"
dependencies = []
description = "Jekyll site; Python deps are for CI/local checks only."

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: checks built ./_site (run `bundle exec rake test` first locally).",
]
testpaths = ["tests"]
